[package]
name = "which-key"
version = "0.1.0"
authors = ["Isaiah Hamilton <isaiah7hamilton@gmail.com>"]
repository = "https://github.com/isaiah-hamilton/which-key"
keywords = ["cross-platform", "cli", "keymaps"]
description = "which key helps you remember your keymaps without leaving the terminal."
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
comfy-table = "7.1.1"
dirs = "5.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_yml = "0.0.12"
